# pixel-agents

./: .gitignore  package.json  tsconfig.json
docs/: sprite-pipeline.md
scripts/: assemble-characters.ts  assemble-floors.ts  assemble-sprites.ts  assemble-walls.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: discovery.rs  jsonl_watcher.rs  layout.rs  main.rs  project.rs  state.rs  tab_focus.rs
webview-ui/: package-lock.json  package.json  vite.config.ts
webview-ui/src/: App.tsx  index.css  platform.ts
webview-ui/src/components/: SettingsModal.tsx
webview-ui/src/hooks/: useEditorActions.ts  useExtensionMessages.ts
webview-ui/src/office/components/: OfficeCanvas.tsx  ToolOverlay.tsx
